src-tauri/src/snapshots/block_notes_lib__commands__tests__snapshot_create_block_response.snap
---
source: src/commands.rs
expression: resp
---
id: "[ULID]"
block_type: content
content: snapshot test content
parent_id: ~
position: 1
deleted_at: ~
archived_at: ~
is_conflict: false
