src-tauri/src/snapshots/block_notes_lib__commands__tests__snapshot_delete_block_response.snap
---
source: src/commands.rs
expression: resp
---
block_id: SNAP_DEL
deleted_at: "[TIMESTAMP]"
descendants_affected: 1
