src-tauri/src/snapshots/block_notes_lib__commands__tests__snapshot_list_blocks_response.snap
---
source: src/commands.rs
expression: resp
---
items:
  - id: SNAP_BLK1
    block_type: content
    content: first
    parent_id: ~
    position: 1
    deleted_at: ~
    archived_at: ~
    is_conflict: false
  - id: SNAP_BLK2
    block_type: page
    content: second
    parent_id: ~
    position: 2
    deleted_at: ~
    archived_at: ~
    is_conflict: false
next_cursor: ~
has_more: false
