src-tauri/src/snapshots/block_notes_lib__commands__tests__snapshot_status_info_response.snap
---
source: src/commands.rs
assertion_line: 2430
expression: status
---
foreground_queue_depth: 0
background_queue_depth: 0
total_ops_dispatched: 0
total_background_dispatched: 0
fg_high_water: 0
bg_high_water: 0
